# telnyx-code-examples

./: CLAUDE.md  README.md  catalog.json  llms-full.txt  llms.txt
.github/: CODEOWNERS
abandoned-cart-recovery-python/: API.md  GUIDE.md  README.md
accounting-tax-season-line-python/: API.md  GUIDE.md  README.md
activate-sim-card-csharp/: .env.example  API.md  ActivateSimCard.csproj  GUIDE.md  Program.cs  README.md
activate-sim-card-go/: API.md  GUIDE.md  README.md
activate-sim-card-java/: .env.example  API.md  Application.java  GUIDE.md  README.md  pom.xml
activate-sim-card-nodejs/: API.md  GUIDE.md  README.md
activate-sim-card-php/: .env.example  API.md  GUIDE.md  README.md  composer.json  index.php
activate-sim-card-python/: API.md  GUIDE.md  README.md  app.py
activate-sim-card-ruby/: .env.example  API.md  GUIDE.md  Gemfile  README.md  app.rb
adventure-game-python/: app.py
after-hours-nurse-triage-python/: API.md  GUIDE.md  README.md
ai-after-hours-emergency-triage-python/: .env.example  API.md  GUIDE.md  README.md  app.py
ai-appointment-booking-sms-flow-python/: .env.example  API.md  GUIDE.md  README.md
ai-appointment-reminder-sms-voice-python/: .env.example  API.md  GUIDE.md  README.md
ai-ivr-dtmf-tool-python/: API.md  (+4 more)
edge-compute-webhook-proxy-python/: .env.example  API.md  GUIDE.md  README.md  app.py  func.toml  pyproject.toml
edge-compute-webhook-proxy-python/function/: func.py
edge-mcp-server-deploy-python/: .env.example  API.md  GUIDE.md  README.md  func.toml  pyproject.toml
edge-mcp-server-deploy-python/function/: func.py
(+1222 files in other folders)
